<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="km">km</string>
    <string name="rs_l">R$ / L</string>
    <string name="km_l">km / L</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="result">R$ 0</string>
    <string name="calculate">Calcular</string>

    <string name="fill_all_fields">Preencha todos os campos</string>
</resources>